support latest minio specification

--- a/roles/minio_container/tasks/main.yml
+++ b/roles/minio_container/tasks/main.yml
@@ -6,8 +6,9 @@
     volumes:
       - /tmp/data:/data
     ports:
-      - "9005:9000"
-    command: server /data
+      - "9000:9000"
+      - "9001:9001"
+    command: server --console-address ":9001" /data
     env:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
